--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="NAudio" version="1.10.0" targetFramework="net472" />
-  <package id="NAudio.Lame" version="1.1.1" targetFramework="net472" />
+  <package id="Json.Net" version="1.0.22" targetFramework="net472" />
 </packages>
