--- a/reaxlisten.csproj
+++ b/reaxlisten.csproj
@@ -36,12 +36,8 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="NAudio, Version=1.10.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>packages\NAudio.1.10.0\lib\net35\NAudio.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="NAudio.Lame, Version=1.1.1.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>packages\NAudio.Lame.1.1.1\lib\netstandard2.0\NAudio.Lame.dll</HintPath>
+    <Reference Include="Json.Net, Version=1.0.22.1, Culture=neutral, PublicKeyToken=null">
+      <HintPath>packages\Json.Net.1.0.22\lib\netstandard2.0\Json.Net.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -56,8 +52,11 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Data.cs" />
+    <Compile Include="GlobalHotkey.cs" />
     <Compile Include="GUInterface\configure_ui.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -70,9 +69,13 @@
     <Compile Include="GUInterface\main_ui.Designer.cs">
       <DependentUpon>main_ui.cs</DependentUpon>
     </Compile>
+    <Compile Include="HotKey.cs" />
+    <Compile Include="KeyboardHook.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Setting.cs" />
     <Compile Include="speech\Speech.cs" />
+    <Compile Include="Utils.cs" />
     <EmbeddedResource Include="GUInterface\configure_ui.resx">
       <DependentUpon>configure_ui.cs</DependentUpon>
     </EmbeddedResource>
@@ -103,11 +106,4 @@
     <None Include="App.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="packages\NAudio.Lame.1.1.1\build\NAudio.Lame.targets" Condition="Exists('packages\NAudio.Lame.1.1.1\build\NAudio.Lame.targets')" />
-  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
-    <PropertyGroup>
-      <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105.The missing file is {0}.</ErrorText>
-    </PropertyGroup>
-    <Error Condition="!Exists('packages\NAudio.Lame.1.1.1\build\NAudio.Lame.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\NAudio.Lame.1.1.1\build\NAudio.Lame.targets'))" />
-  </Target>
 </Project>
